--- a/linux/Dockerfile
+++ b/linux/Dockerfile
@@ -6,4 +6,4 @@ RUN pip install -r /requirements.txt
 COPY pipe /
 COPY LICENSE pipe.yml README.md /
 
-ENTRYPOINT ["python3", "/RunSCA.py"]
+ENTRYPOINT ["python3", "/RunSAST.py"]
